--- a/packages/encrypted-secrets/package.json
+++ b/packages/encrypted-secrets/package.json
@@ -34,5 +34,6 @@
     "jest": "26.1.0",
     "prettier": "2.0.5",
     "regenerator-runtime": "^0.13.2"
-  }
+  },
+  "gitHead": "a820662c1725424c96db4e7074d4808b00b17ed9"
 }
