--- a/packages/db_meta/package.json
+++ b/packages/db_meta/package.json
@@ -29,5 +29,10 @@
     "jest": "26.1.0",
     "prettier": "2.0.5",
     "regenerator-runtime": "^0.13.2"
+  },
+  "dependencies": {
+    "@launchql/inflection": "^0.1.0",
+    "@launchql/ext-jobs": "^0.1.0",
+    "@launchql/ext-types": "^0.0.6"
   }
 }
