--- a/packages/db_meta/package.json
+++ b/packages/db_meta/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pyramation/launchql-meta-schema",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "description": "db meta",
   "author": "Web, Inc. <pyramation@gmail.com>",
   "publishConfig": {
@@ -31,16 +31,16 @@
     "regenerator-runtime": "^0.13.2"
   },
   "dependencies": {
+    "@launchql/ext-default-roles": "^0.1.30",
+    "@launchql/ext-defaults": "^0.1.30",
     "@launchql/ext-jobs": "^0.2.29",
-    "@launchql/ext-types": "^0.1.29",
-    "@launchql/inflection": "^0.1.30",
-    "@launchql/ext-stamps": "^0.1.17",
-    "@launchql/totp": "^0.1.30",
-    "@launchql/utils": "^0.1.30",
     "@launchql/ext-jwt-claims": "^0.1.27",
-    "@launchql/ext-default-roles":"^0.1.30",
-    "@launchql/ext-defaults":"^0.1.30",
+    "@launchql/ext-stamps": "^0.1.17",
+    "@launchql/ext-types": "^0.1.29",
     "@launchql/ext-uuid": "^0.1.16",
-    "@launchql/ext-verify": "^0.1.30"
+    "@launchql/ext-verify": "^0.1.30",
+    "@launchql/inflection": "^0.1.30",
+    "@launchql/totp": "^0.1.30",
+    "@launchql/utils": "^0.1.30"
   }
 }
