refactor: begin consolidation into single workspace; add category globs and scaffold ext-verify, ext-types, ext-uuid
Co-Authored-By: Dan Lynch <pyramation@gmail.com>

--- a/launchql.json
+++ b/launchql.json
@@ -1,7 +1,12 @@
 {
   "packages": [
     "packages/*",
-    "extensions/@*/*",
-    "extensions/*"
+    "packages/security/*",
+    "packages/jobs/*",
+    "packages/data-types/*",
+    "packages/metrics/*",
+    "packages/geo/*",
+    "packages/utils/*",
+    "packages/meta/*"
   ]
 }
