--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,9 @@
 packages:
-  - 'packages/*' 
+  - 'packages/*'
+  - 'packages/security/*'
+  - 'packages/jobs/*'
+  - 'packages/data-types/*'
+  - 'packages/metrics/*'
+  - 'packages/geo/*'
+  - 'packages/utils/*'
+  - 'packages/meta/*' 
