chore: make tests non-blocking across packages (jest --passWithNoTests, ignore dist)
Co-Authored-By: Dan Lynch <pyramation@gmail.com>

--- a/packages/my-first/package.json
+++ b/packages/my-first/package.json
@@ -14,7 +14,7 @@
     "clean": "rimraf dist",
     "prepare": "npm run build",
     "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "jest --passWithNoTests --testPathIgnorePatterns=/dist/",
+    "test:watch": "jest --watch --testPathIgnorePatterns=/dist/"
   }
 }
