--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "graphql-tag": "^2.12.6",
     "jest": "^29.6.2",
     "jest-in-case": "^1.0.2",
+    "@types/jest-in-case": "^1.0.3",
     "lerna": "^8.2.3",
     "pgsql-test": "^2.6.2",
     "prettier": "^3.0.2",
