--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,31 +61,86 @@ jobs:
       - name: Install
         run: pnpm install
 
+      - name: Install LaunchQL CLI globally
+        run: pnpm add -g @launchql/cli@4.7.2
+
       - name: Build
         run: pnpm -r build
 
-      - name: Fix lql permissions (if present)
+      - name: Seed app_user
         run: |
-          if [ -f node_modules/.bin/lql ]; then chmod +x node_modules/.bin/lql; else echo "lql not installed, skipping chmod"; fi
-
-      - name: Seed app_user (if lql present)
-        run: |
-          if [ -f node_modules/.bin/lql ]; then
-            pnpm lql admin-users bootstrap --yes
-            pnpm lql admin-users add --test --yes
-          else
-            echo "lql not installed, skipping seed"
-          fi
+          lql admin-users bootstrap --yes
+          lql admin-users add --test --yes
         env:
           PGHOST: pg_db
           PGPORT: 5432
           PGUSER: postgres
           PGPASSWORD: password
 
-      - name: Test (workspace)
-        run: pnpm -r test
-        env:
-          PGHOST: pg_db
-          PGPORT: 5432
-          PGUSER: postgres
-          PGPASSWORD: password
+      # Test all LaunchQL modules
+      - name: Test data-types/base32
+        run: cd ./packages/data-types/base32 && pnpm test
+
+      - name: Test data-types/ext-types
+        run: cd ./packages/data-types/ext-types && pnpm test
+
+      - name: Test data-types/ext-uuid
+        run: cd ./packages/data-types/ext-uuid && pnpm test
+
+      - name: Test data-types/inflection
+        run: cd ./packages/data-types/inflection && pnpm test
+
+      - name: Test data-types/stamps
+        run: cd ./packages/data-types/stamps && pnpm test
+
+      - name: Test geo/geotypes
+        run: cd ./packages/geo/geotypes && pnpm test
+
+      - name: Test jobs/database-jobs
+        run: cd ./packages/jobs/database-jobs && pnpm test
+
+      - name: Test jobs/jobs
+        run: cd ./packages/jobs/jobs && pnpm test
+
+      - name: Test meta/db_meta
+        run: cd ./packages/meta/db_meta && pnpm test
+
+      - name: Test meta/db_meta_modules
+        run: cd ./packages/meta/db_meta_modules && pnpm test
+
+      - name: Test meta/db_meta_test
+        run: cd ./packages/meta/db_meta_test && pnpm test
+
+      - name: Test metrics/achievements
+        run: cd ./packages/metrics/achievements && pnpm test
+
+      - name: Test metrics/measurements
+        run: cd ./packages/metrics/measurements && pnpm test
+
+      - name: Test security/encrypted-secrets
+        run: cd ./packages/security/encrypted-secrets && pnpm test
+
+      - name: Test security/encrypted-secrets-table
+        run: cd ./packages/security/encrypted-secrets-table && pnpm test
+
+      - name: Test security/ext-default-roles
+        run: cd ./packages/security/ext-default-roles && pnpm test
+
+      - name: Test security/ext-jwt-claims
+        run: cd ./packages/security/ext-jwt-claims && pnpm test
+
+      - name: Test security/ext-verify
+        run: cd ./packages/security/ext-verify && pnpm test
+
+      - name: Test utils/defaults
+        run: cd ./packages/utils/defaults && pnpm test
+
+      - name: Test utils/faker
+        run: cd ./packages/utils/faker && pnpm test
+
+      - name: Test utils/totp
+        run: cd ./packages/utils/totp && pnpm test
+
+      - name: Test utils/utils
+        run: cd ./packages/utils/utils && pnpm test
+
