--- a/packages/metrics/measurements/package.json
+++ b/packages/metrics/measurements/package.json
@@ -3,14 +3,21 @@
   "version": "0.4.6",
   "description": "measurements",
   "publishConfig": {
-    "access": "public",
-    "directory": "dist"
+    "access": "public"
   },
+  "files": [
+    "sql/**",
+    "schemas/**",
+    "deploy/**",
+    "verify/**",
+    "revert/**",
+    "*.control",
+    "*.plan",
+    "README.md",
+    "LICENSE",
+    "src/**"
+  ],
   "scripts": {
-    "copy": "cpy ../../../LICENSE README.md package.json dist --flat && cpy \"schemas/**\" \"sql/**\" \"*.control\" \"launchql.plan\" dist --parents --cwd . && sh -c 'for d in deploy verify revert; do if [ -d \"$d\" ]; then cp -a \"$d\" dist/; fi; done'",
-    "clean": "rimraf dist",
-    "prepare": "npm run build",
-    "build": "npm run clean && npm run copy",
     "test": "jest --config ./jest.config.js",
     "test:watch": "jest --config ./jest.config.js --watch"
   },
