--- a/packages/data-types/stamps/package.json
+++ b/packages/data-types/stamps/package.json
@@ -2,6 +2,10 @@
   "name": "@pgpm/stamps",
   "version": "0.7.1",
   "description": "Timestamp utilities and audit trail functions for PostgreSQL",
+  "author": "Dan Lynch <pyramation@gmail.com>",
+  "contributors": [
+    "Interweb <developers@interweb.co>"
+  ],
   "keywords": [
     "postgresql",
     "pgpm",
