--- a/packages/data-types/types/package.json
+++ b/packages/data-types/types/package.json
@@ -2,6 +2,10 @@
   "name": "@pgpm/types",
   "version": "0.7.1",
   "description": "Core PostgreSQL data types with deploy/verify/revert SQL scripts",
+  "author": "Dan Lynch <pyramation@gmail.com>",
+  "contributors": [
+    "Interweb <developers@interweb.co>"
+  ],
   "keywords": [
     "postgresql",
     "pgpm",
