--- a/packages/data-types/uuid/package.json
+++ b/packages/data-types/uuid/package.json
@@ -2,6 +2,10 @@
   "name": "@pgpm/uuid",
   "version": "0.7.1",
   "description": "UUID utilities and extensions for PostgreSQL",
+  "author": "Dan Lynch <pyramation@gmail.com>",
+  "contributors": [
+    "Interweb <developers@interweb.co>"
+  ],
   "keywords": [
     "postgresql",
     "pgpm",
