--- a/packages/jobs/database-jobs/package.json
+++ b/packages/jobs/database-jobs/package.json
@@ -2,6 +2,10 @@
   "name": "@pgpm/database-jobs",
   "version": "0.7.1",
   "description": "Database-specific job handling and queue management",
+  "author": "Dan Lynch <pyramation@gmail.com>",
+  "contributors": [
+    "Interweb <developers@interweb.co>"
+  ],
   "keywords": [
     "postgresql",
     "pgpm",
