--- a/packages/jobs/jobs/package.json
+++ b/packages/jobs/jobs/package.json
@@ -2,6 +2,10 @@
   "name": "@pgpm/jobs",
   "version": "0.7.1",
   "description": "Core job system for background task processing in PostgreSQL",
+  "author": "Dan Lynch <pyramation@gmail.com>",
+  "contributors": [
+    "Interweb <developers@interweb.co>"
+  ],
   "keywords": [
     "postgresql",
     "pgpm",
