--- a/packages/meta/db_meta/package.json
+++ b/packages/meta/db_meta/package.json
@@ -2,6 +2,10 @@
   "name": "@pgpm/meta-db",
   "version": "0.7.1",
   "description": "Database metadata utilities and introspection functions",
+  "author": "Dan Lynch <pyramation@gmail.com>",
+  "contributors": [
+    "Interweb <developers@interweb.co>"
+  ],
   "keywords": [
     "postgresql",
     "pgpm",
