--- a/packages/security/default-roles/package.json
+++ b/packages/security/default-roles/package.json
@@ -2,6 +2,10 @@
   "name": "@pgpm/default-roles",
   "version": "0.7.1",
   "description": "Default PostgreSQL role definitions and permissions",
+  "author": "Dan Lynch <pyramation@gmail.com>",
+  "contributors": [
+    "Interweb <developers@interweb.co>"
+  ],
   "keywords": [
     "postgresql",
     "pgpm",
