--- a/packages/security/defaults/package.json
+++ b/packages/security/defaults/package.json
@@ -2,6 +2,10 @@
   "name": "@pgpm/defaults",
   "version": "0.7.1",
   "description": "Security defaults and baseline configurations",
+  "author": "Dan Lynch <pyramation@gmail.com>",
+  "contributors": [
+    "Interweb <developers@interweb.co>"
+  ],
   "keywords": [
     "postgresql",
     "pgpm",
