--- a/packages/security/encrypted-secrets-table/package.json
+++ b/packages/security/encrypted-secrets-table/package.json
@@ -2,6 +2,10 @@
   "name": "@pgpm/encrypted-secrets-table",
   "version": "0.7.1",
   "description": "Table-based encrypted secrets storage and retrieval",
+  "author": "Dan Lynch <pyramation@gmail.com>",
+  "contributors": [
+    "Interweb <developers@interweb.co>"
+  ],
   "keywords": [
     "postgresql",
     "pgpm",
