--- a/packages/utils/base32/package.json
+++ b/packages/utils/base32/package.json
@@ -2,6 +2,10 @@
   "name": "@pgpm/base32",
   "version": "0.7.1",
   "description": "Base32 encoding and decoding functions for PostgreSQL",
+  "author": "Dan Lynch <pyramation@gmail.com>",
+  "contributors": [
+    "Interweb <developers@interweb.co>"
+  ],
   "keywords": [
     "postgresql",
     "pgpm",
