--- a/packages/utils/faker/package.json
+++ b/packages/utils/faker/package.json
@@ -2,6 +2,10 @@
   "name": "@pgpm/faker",
   "version": "0.7.1",
   "description": "Fake data generation utilities for testing and development",
+  "author": "Dan Lynch <pyramation@gmail.com>",
+  "contributors": [
+    "Interweb <developers@interweb.co>"
+  ],
   "keywords": [
     "postgresql",
     "pgpm",
