--- a/packages/utils/inflection/package.json
+++ b/packages/utils/inflection/package.json
@@ -2,6 +2,10 @@
   "name": "@pgpm/inflection",
   "version": "0.7.1",
   "description": "String inflection utilities for PostgreSQL naming conventions",
+  "author": "Dan Lynch <pyramation@gmail.com>",
+  "contributors": [
+    "Interweb <developers@interweb.co>"
+  ],
   "keywords": [
     "postgresql",
     "pgpm",
