--- a/packages/utils/verify/package.json
+++ b/packages/utils/verify/package.json
@@ -2,6 +2,10 @@
   "name": "@pgpm/verify",
   "version": "0.7.1",
   "description": "Verification utilities for LaunchQL deploy/verify/revert workflow",
+  "author": "Dan Lynch <pyramation@gmail.com>",
+  "contributors": [
+    "Interweb <developers@interweb.co>"
+  ],
   "keywords": [
     "postgresql",
     "pgpm",
