--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -1,40 +1,13 @@
-name: pgpm unit tests
+name: pgpm integration tests
 on:
   push:
   pull_request:
   workflow_dispatch:
 
 jobs:
-  test:
+  integration-test:
     runs-on: ubuntu-latest
     container: pyramation/node-sqitch:20.12.0
-    continue-on-error: true
-    strategy:
-      fail-fast: false
-      matrix:
-        package:
-          - utils/verify
-          - utils/utils
-          - utils/inflection
-          - utils/faker
-          - utils/base32
-          - security/totp
-          - security/jwt-claims
-          - security/encrypted-secrets-table
-          - security/encrypted-secrets
-          - security/defaults
-          - security/default-roles
-          - metrics/measurements
-          - metrics/achievements
-          - meta/db_meta_test
-          - meta/db_meta_modules
-          - meta/db_meta
-          - jobs/jobs
-          - jobs/database-jobs
-          - data-types/uuid
-          - data-types/types
-          - data-types/stamps
-          - data-types/geotypes
 
     env:
       PGHOST: pg_db
@@ -100,6 +73,6 @@ jobs:
           pgpm admin-users bootstrap --yes
           pgpm admin-users add --test --yes
 
-      - name: Test ${{ matrix.package }}
-        run: cd ./packages/${{ matrix.package }} && pnpm test
+      - name: Run Integration Tests
+        run: ./scripts/test-all-packages.js
 
