--- a/packages/security/encrypted-secrets-table/package.json
+++ b/packages/security/encrypted-secrets-table/package.json
@@ -4,7 +4,7 @@
   "description": "Table-based encrypted secrets storage and retrieval",
   "author": "Dan Lynch <pyramation@gmail.com>",
   "contributors": [
-    "Interweb <developers@interweb.co>"
+    "Constructive <developers@constructive.io>"
   ],
   "keywords": [
     "postgresql",
@@ -28,10 +28,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/launchql/pgpm-modules"
+    "url": "https://github.com/constructive-io/pgpm-modules"
   },
-  "homepage": "https://github.com/launchql/pgpm-modules",
+  "homepage": "https://github.com/constructive-io/pgpm-modules",
   "bugs": {
-    "url": "https://github.com/launchql/pgpm-modules/issues"
+    "url": "https://github.com/constructive-io/pgpm-modules/issues"
   }
 }
