--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-unused-imports": "^4.3.0",
-    "graphile-test": "^2.11.1",
+    "graphile-test": "2.11.3",
     "graphql-tag": "^2.12.6",
     "jest": "^29.6.2",
     "jest-in-case": "^1.0.2",
