--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,11 @@
 packages:
-  - 'packages/*'
-  - 'packages/security/*'
-  - 'packages/jobs/*'
-  - 'packages/data-types/*'
-  - 'packages/metrics/*'
-  - 'packages/utils/*'
-  - 'packages/meta/*' 
+  - packages/*
+  - packages/security/*
+  - packages/jobs/*
+  - packages/data-types/*
+  - packages/metrics/*
+  - packages/utils/*
+  - packages/meta/*
+
+onlyBuiltDependencies:
+  - nx
