--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-unused-imports": "^4.3.0",
-    "graphile-test": "2.11.3",
+    "graphile-test": "^2.11.5",
     "graphql-tag": "^2.12.6",
     "jest": "^29.6.2",
     "jest-in-case": "^1.0.2",
     "lerna": "^8.2.3",
-    "pgsql-test": "^2.16.2",
+    "pgsql-test": "^2.17.2",
     "prettier": "^3.0.2",
     "rimraf": "4.4.1",
     "ts-jest": "^29.4.5",
