--- a/packages/faker/package.json
+++ b/packages/faker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pgpm/faker",
+  "name": "@pgpm-testing/faker",
   "version": "0.15.3",
   "description": "Fake data generation utilities for testing and development",
   "author": "Dan Lynch <pyramation@gmail.com>",
@@ -21,8 +21,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@pgpm/types": "workspace:*",
-    "@pgpm/verify": "workspace:*"
+    "@pgpm-testing/types": "workspace:*",
+    "@pgpm-testing/verify": "workspace:*"
   },
   "devDependencies": {
     "pgpm": "^1.0.0"
