--- a/packages/achievements/package.json
+++ b/packages/achievements/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pgpm/achievements",
+  "name": "@pgpm-testing/achievements",
   "version": "0.15.3",
   "description": "Achievement system for tracking user progress and milestones",
   "author": "Dan Lynch <pyramation@gmail.com>",
@@ -21,8 +21,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@pgpm/jwt-claims": "workspace:*",
-    "@pgpm/verify": "workspace:*"
+    "@pgpm-testing/jwt-claims": "workspace:*",
+    "@pgpm-testing/verify": "workspace:*"
   },
   "devDependencies": {
     "pgpm": "^1.0.0"
