--- a/packages/base32/package.json
+++ b/packages/base32/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pgpm/base32",
+  "name": "@pgpm-testing/base32",
   "version": "0.15.3",
   "description": "Base32 encoding and decoding functions for PostgreSQL",
   "author": "Dan Lynch <pyramation@gmail.com>",
@@ -21,7 +21,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@pgpm/verify": "workspace:*"
+    "@pgpm-testing/verify": "workspace:*"
   },
   "devDependencies": {
     "pgpm": "^1.0.0"
