--- a/packages/database-jobs/package.json
+++ b/packages/database-jobs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pgpm/database-jobs",
+  "name": "@pgpm-testing/database-jobs",
   "version": "0.15.3",
   "description": "Database-specific job handling and queue management",
   "author": "Dan Lynch <pyramation@gmail.com>",
@@ -24,7 +24,7 @@
     "pgpm": "^1.0.0"
   },
   "dependencies": {
-    "@pgpm/verify": "workspace:*"
+    "@pgpm-testing/verify": "workspace:*"
   },
   "repository": {
     "type": "git",
