--- a/packages/db-meta-modules/package.json
+++ b/packages/db-meta-modules/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pgpm/db-meta-modules",
+  "name": "@pgpm-testing/db-meta-modules",
   "version": "0.15.3",
   "description": "Module metadata handling and dependency tracking",
   "author": "Dan Lynch <pyramation@gmail.com>",
@@ -21,8 +21,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@pgpm/db-meta-schema": "workspace:*",
-    "@pgpm/verify": "workspace:*"
+    "@pgpm-testing/db-meta-schema": "workspace:*",
+    "@pgpm-testing/verify": "workspace:*"
   },
   "devDependencies": {
     "pgpm": "^1.0.0"
