--- a/packages/db-meta-schema/package.json
+++ b/packages/db-meta-schema/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pgpm/db-meta-schema",
+  "name": "@pgpm-testing/db-meta-schema",
   "version": "0.15.3",
   "description": "Database metadata utilities and introspection functions",
   "author": "Dan Lynch <pyramation@gmail.com>",
@@ -21,10 +21,10 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@pgpm/database-jobs": "workspace:*",
-    "@pgpm/inflection": "workspace:*",
-    "@pgpm/types": "workspace:*",
-    "@pgpm/verify": "workspace:*"
+    "@pgpm-testing/database-jobs": "workspace:*",
+    "@pgpm-testing/inflection": "workspace:*",
+    "@pgpm-testing/types": "workspace:*",
+    "@pgpm-testing/verify": "workspace:*"
   },
   "devDependencies": {
     "pgpm": "^1.0.0"
