--- a/packages/totp/package.json
+++ b/packages/totp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pgpm/totp",
+  "name": "@pgpm-testing/totp",
   "version": "0.15.3",
   "description": "Time-based One-Time Password (TOTP) authentication",
   "author": "Dan Lynch <pyramation@gmail.com>",
@@ -21,8 +21,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@pgpm/base32": "workspace:*",
-    "@pgpm/verify": "workspace:*"
+    "@pgpm-testing/base32": "workspace:*",
+    "@pgpm-testing/verify": "workspace:*"
   },
   "devDependencies": {
     "pgpm": "^1.0.0"
