--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pgpm/types",
+  "name": "@pgpm-testing/types",
   "version": "0.15.3",
   "description": "Core PostgreSQL data types with deploy/verify/revert SQL scripts",
   "author": "Dan Lynch <pyramation@gmail.com>",
@@ -21,7 +21,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@pgpm/verify": "workspace:*"
+    "@pgpm-testing/verify": "workspace:*"
   },
   "devDependencies": {
     "pgpm": "^1.0.0"
